# process-mining-decomposition

./: .gitignore  assignment.md
decomposer/: pyproject.toml
decomposer/decomposer/: decomposer.py
